build: finally use ng build with correct base (?)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng ng build --base-href=/Bob-angular/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
