--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,7 +1,7 @@
 name: Feature request
 description: Suggest an idea for this project
 labels: 
-  - enhancement
+  - 🚀 enhancement
 body:
   - type: markdown
     attributes:
